--- a/app/src/main/res/layout/individual_task_page_fragment.xml
+++ b/app/src/main/res/layout/individual_task_page_fragment.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".IndividualTaskPage">
+    tools:context="com.example.android.navigation.MainActivity"
+    android:name="com.example.android.navigation.IndividualTaskPageFragment">
 
     <TextView
         android:layout_width="match_parent"
