--- a/app/src/main/res/layout/individual_task_page_fragment.xml
+++ b/app/src/main/res/layout/individual_task_page_fragment.xml
@@ -49,7 +49,7 @@
             app:layout_constraintVertical_bias="0.0">
 
             <Button
-                android:id="@+id/button13"
+                android:id="@+id/addPriority"
                 android:layout_width="match_parent"
                 android:layout_height="78dp"
                 android:backgroundTint="#BBBDE1"
@@ -65,7 +65,7 @@
             </LinearLayout>
 
             <Button
-                android:id="@+id/button15"
+                android:id="@+id/addDate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="#BBBDE1"
@@ -78,7 +78,7 @@
                 android:orientation="vertical"></LinearLayout>
 
             <Button
-                android:id="@+id/button16"
+                android:id="@+id/remove"
                 style="@android:style/Widget.DeviceDefault.Button"
                 android:layout_width="match_parent"
                 android:layout_height="78dp"
