--- a/app/src/main/res/layout/fragment_main_tasks_page_list_item.xml
+++ b/app/src/main/res/layout/fragment_main_tasks_page_list_item.xml
@@ -17,10 +17,11 @@
         <TextView
             android:id="@+id/textview"
             android:layout_width="355dp"
-            android:layout_height="46dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_height="wrap_content"
+            android:text="@{task.toHTMLString()}"
             android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
