--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -15,10 +15,6 @@
             app:destination="@id/individualTaskPage" />
     </fragment>
     <fragment
-        android:id="@+id/settingsFragment"
-        android:name="com.example.android.navigation.SettingsFragment"
-        android:label="SettingsFragment" />
-    <fragment
         android:id="@+id/individualTaskPage"
         android:name="com.example.android.navigation.individualTaskPage.IndividualTaskPage"
         android:label="individual_task_page_fragment"
@@ -29,4 +25,9 @@
             app:argType="string" />
 
     </fragment>
+    <fragment
+        android:id="@+id/blankFragment2"
+        android:name="com.example.android.navigation.BlankFragment"
+        android:label="fragment_blank"
+        tools:layout="@layout/fragment_blank" />
 </navigation>
