--- a/app/src/main/res/layout/individual_task_page_fragment.xml
+++ b/app/src/main/res/layout/individual_task_page_fragment.xml
@@ -14,6 +14,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/main_layout"
         android:layout_width="498dp"
         android:layout_height="match_parent"
         android:animationCache="true"
