--- a/app/src/main/res/layout/individual_task_page_fragment.xml
+++ b/app/src/main/res/layout/individual_task_page_fragment.xml
@@ -113,7 +113,16 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="37dp"
-                android:orientation="vertical"></LinearLayout>
+                android:orientation="vertical"
+                android:background="@android:color/holo_orange_light">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/date"
+                    android:hint="Task due date  :"
+                    android:textSize="30dp" />
+            </LinearLayout>
 
             <Button
                 android:id="@+id/remove"
