--- a/app/src/main/res/layout/individual_task_page_fragment.xml
+++ b/app/src/main/res/layout/individual_task_page_fragment.xml
@@ -117,9 +117,9 @@
                 android:background="@android:color/holo_orange_light">
 
                 <TextView
+                    android:id="@+id/displayDate"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:id="@+id/date"
                     android:hint="Task due date  :"
                     android:textSize="30dp" />
             </LinearLayout>
