--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -22,12 +22,10 @@
 
         <argument
             android:name="taskId"
+            app:nullable="true"
+            android:defaultValue="@null"
             app:argType="string" />
 
     </fragment>
-    <fragment
-        android:id="@+id/blankFragment2"
-        android:name="com.example.android.navigation.BlankFragment"
-        android:label="fragment_blank"
-        tools:layout="@layout/fragment_blank" />
+
 </navigation>
