--- a/app/src/main/res/layout/fragment_main_tasks_page.xml
+++ b/app/src/main/res/layout/fragment_main_tasks_page.xml
@@ -34,6 +34,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#ECE5FA"
         tools:context=".MainTasksPage/MainTasksPageFragment">
 
         <!-- Simplest way of displaying scrollable text and data. There is a
@@ -51,10 +52,10 @@
             android:layout_height="271dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="0.461"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.573"
+            app:layout_constraintVertical_bias="0.71"
             tools:listitem="@layout/fragment_main_tasks_page_list_item" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -69,10 +70,10 @@
             android:contentDescription="@string/fab_content_desc"
             app:layout_constraintBottom_toTopOf="@+id/taskList"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.389"
+            app:layout_constraintHorizontal_bias="0.449"
             app:layout_constraintStart_toStartOf="@+id/textView"
             app:layout_constraintTop_toBottomOf="@+id/text_input"
-            app:layout_constraintVertical_bias="0.466"
+            app:layout_constraintVertical_bias="0.0"
             app:srcCompat="@android:drawable/ic_input_add" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -87,10 +88,10 @@
             android:contentDescription="@string/fab_content_desc"
             app:layout_constraintBottom_toTopOf="@+id/taskList"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.186"
+            app:layout_constraintHorizontal_bias="0.196"
             app:layout_constraintStart_toEndOf="@+id/add_task"
             app:layout_constraintTop_toBottomOf="@+id/text_input"
-            app:layout_constraintVertical_bias="0.512"
+            app:layout_constraintVertical_bias="0.0"
             app:srcCompat="@android:drawable/ic_delete" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -104,10 +105,10 @@
             android:contentDescription="@string/fab_content_desc"
             app:layout_constraintBottom_toTopOf="@+id/taskList"
             app:layout_constraintEnd_toStartOf="@+id/textView"
-            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintHorizontal_bias="0.825"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/text_input"
-            app:layout_constraintVertical_bias="0.482"
+            app:layout_constraintVertical_bias="0.0"
             app:srcCompat="@android:drawable/ic_dialog_alert" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -121,8 +122,10 @@
             android:contentDescription="@string/fab_content_desc"
             app:layout_constraintBottom_toTopOf="@+id/taskList"
             app:layout_constraintEnd_toStartOf="@+id/filterByImportance"
+            app:layout_constraintHorizontal_bias="0.457"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/text_input"
+            app:layout_constraintVertical_bias="0.0"
             app:srcCompat="@android:drawable/ic_dialog_dialer" />
 
         <com.google.android.material.textfield.TextInputLayout
@@ -131,8 +134,10 @@
             android:layout_height="93dp"
             app:layout_constraintBottom_toTopOf="@+id/taskList"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.166"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.25">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
@@ -151,7 +156,43 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/displayAllTasks"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Show Tasks"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/displayAllTasks" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:text="List Task"
+            app:layout_constraintStart_toEndOf="@+id/textView2"
+            app:layout_constraintTop_toBottomOf="@+id/filterByImportance" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="92dp"
+            android:text="Add Task"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/add_task" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:text="Delete Task"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/remove_all_tasks" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
